--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,12 @@ version: "3.9"
 
 services:
     php-apache:
-        image: egghdz/docker-php-apache:latest
+        image: egghdz/docker-compose-lamp-local:latest
+        build:
+            context: .
+            args:
+                uid: ${UID:-33}
+                gid: ${GID:-33}
         ports:
             - "80:80"
         volumes:
