Add a workaround to allow Apache in the container be aware of the host HTTP listening port.
Also tidy things up.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,14 @@
-UID=1000
-GID=1000
+# For unix-based host operating systems, e.g., Linux, macOS, etc., these values need to be set so that they are aligned
+# with the current logged in user in the host. Via Docker Compose and `Dockerfile`, then the `www-data` user and user
+# group in the built image can be set with the same ids and hence avoiding any mount volume directory/file permission
+# issue.
+HOST_UID=1000
+HOST_GID=1000
+
+# Apache in the official PHP docker image only listens to port `80` by default. If intended to use a different port for
+# local development, it should be set here. Via Docker Compose and `Dockerfile`, then Apache configuration can be
+# updated and hence any internal HTTP calls inside the container can be properly handled by Apache.
+HOST_HTTP_PORT=8080
 
 MYSQL_DATABASE=Egghdz_Database
 MYSQL_USER=egghdz_user
