--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,11 @@ services:
         build:
             context: .
             args:
-                uid: ${UID:-33}
-                gid: ${GID:-33}
+                uid: ${HOST_UID:-33}
+                gid: ${HOST_GID:-33}
+                http_port: ${HOST_HTTP_PORT:-8080}
         ports:
-            - "80:80"
+            - "${HOST_HTTP_PORT:-8080}:80"
         volumes:
             - ./www_root:/var/www/html
         depends_on:
