Replace the previous `Dockerfile` UID/GID workaround with the in-built `users` option of Docker and the official PHP image.

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,15 @@
 # For unix-based host operating systems, e.g., Linux, macOS, etc., these values need to be set so that they are aligned
-# with the current logged in user in the host. Via Docker Compose and `Dockerfile`, then the `www-data` user and user
-# group in the built image can be set with the same ids and hence avoiding any mount volume directory/file permission
-# issue.
+# with the current logged in user in the host. Via Docker Compose, then Apache will be run with those ids in the built
+# image and hence avoiding any mount volume directory/file permission issue.
 HOST_UID=1000
 HOST_GID=1000
 
 # Apache in the official PHP docker image only listens to port `80` by default. If intended to use a different port for
-# local development, it should be set here. Via Docker Compose and `Dockerfile`, then Apache configuration can be
-# updated and hence any internal HTTP calls inside the container can be properly handled by Apache.
-HOST_HTTP_PORT=8080
+# local development, it might need to be set here. Via Docker Compose and `Dockerfile`, then Apache configuration can
+# be updated and hence any internal HTTP calls inside the container can be properly handled by Apache.
+# E.g., if an application is configured to communicate with itself via `8080`, but Apache only listens to `80`, then
+# any application internal call to `localhost:8080` will return `404`.
+HOST_HTTP_PORT=80
 
 MYSQL_DATABASE=Egghdz_Database
 MYSQL_USER=egghdz_user
