--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,10 @@ services:
         build:
             context: .
             args:
-                uid: ${HOST_UID:-33}
-                gid: ${HOST_GID:-33}
                 http_port: ${HOST_HTTP_PORT:-8080}
+        user: "${HOST_UID:-33}:${HOST_GID:-33}"
         ports:
-            - "${HOST_HTTP_PORT:-8080}:80"
+            - "${HOST_HTTP_PORT:-80}:80"
         volumes:
             - ./www_root:/var/www/html
         depends_on:
